feat: add docker script

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "docker:start": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:restart": "npm run stop && docker-compose pull && npm run start"
   },
   "ci": {
     "version": "10"
