--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-eat-node",
+    "start": "egg-scripts start --daemon --title=egg-server-eat-node --port=3000",
     "stop": "egg-scripts stop --title=egg-server-eat-node",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
