--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,21 @@ services:
   mongodb:
     image: mongo:latest
     container_name: mongo-db-short-url
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: 123456
     expose:
-        - 27017
+      - 27017
     volumes:
-        - ./mongodb:/data/db
+      - ./mongodb:/data/db
   node_server:
     build: ./
     container_name: egg-short-url
+    command: sh -c './wait-for.sh mongo:27017 -- npm start' # 启动服务
     links:
-        - mongodb:mongo
+      - "mongodb:mongo"
     expose:
-        - 3000
+      - 3000
+    depends_on:
+      - mongodb
