--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,9 @@ services:
   node_server:
     build: ./
     container_name: egg-short-url
-    command: sh -c './wait-for.sh mongo:27017 -- npm start' # 启动服务
     links:
       - "mongodb:mongo"
-    expose:
-      - 3000
+    ports:
+      - 7000:3000
     depends_on:
       - mongodb
