--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,12 @@ services:
       - 7000:3000
     depends_on:
       - mongodb
+  nginx:
+    restart: always
+    image: nginx:latest
+    ports:
+      - 10180:80
+      - 101443:443
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
