--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,10 @@ services:
   nginx:
     restart: always
     image: nginx:latest
+    container_name: nginx-short-url
     ports:
-      - 10180:80
-      - 101443:443
+      - 1180:80
+      - 11443:443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
