--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,33 +26,36 @@ http {
     }
   }
   server {
-    listen 80;
+   # listen 80;
     listen 443 ssl http2;
     server_name safe.warmplace.cn;
-    #ssl on;
+    ssl on;
     ssl_certificate   /etc/nginx/https/4695048_safe.warmplace.cn.pem;
     ssl_certificate_key  /etc/nginx/https/4695048_safe.warmplace.cn.key;
     ssl_session_timeout 5m;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
+    # set max upload size
+    client_max_body_size 4096M;
+    fastcgi_buffers 64 4K;    
     charset utf-8;
-    location ^~ /api {
-      proxy_pass            http://127.0.0.1:7000;
-      proxy_set_header        X-Real-IP $remote_addr;
-      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header        Host $http_host;
-      proxy_set_header        Whatis-Scheme $scheme;
+    error_page 497  https://$host$uri?$args;
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
     }
     location ^~ / {
-      root /usr/share/nginx/html/web-safe;
-      index index.html;
-      try_files $uri /index.html;
-      set $cache "no-store"; # 入口html不缓存
-      if ( $request_uri ~* /static/* ) { # 假设静态资源都是在这个目录
-        set $cache "max-age=2592000, private"; # 静态资源强缓存2年,过期走协商(默认有Last-Modified) 不使用代理缓存
-      }
-      add_header Cache-Control $cache;
+      proxy_pass            http://127.0.0.1:7000;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location = /.htaccess {
+        return 404;
     }
   }
 }
