--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,5 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/https:/etc/nginx/https
+      - ./nginx:/etc/nginx
       - ./static:/usr/share/nginx/html
