--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
     }
   }
   server {
-   # listen 80;
+    listen 80;
     listen 443 ssl http2;
     server_name safe.warmplace.cn;
     ssl on;
