--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,8 +30,8 @@ http {
     listen 443 ssl http2;
     server_name safe.warmplace.cn;
     ssl on;
-    ssl_certificate   /etc/nginx/https/4695048_safe.warmplace.cn.pem;
-    ssl_certificate_key  /etc/nginx/https/4695048_safe.warmplace.cn.key;
+    ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
+    ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
     ssl_session_timeout 5m;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
