--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,6 @@ services:
       - 11443:443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/https:/ssl:rw
-      - ./static:/usr/share/nginx/html
+      - ./nginx/conf.d:/etc/nginx/conf.d/
+      - ./nginx/https:/ssl/:rw
+      - ./static:/usr/share/nginx/html/:rw
