--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,4 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/https:/ssl/:rw
-      - ./static:/usr/share/nginx/html/:rw
+      - ./static:/usr/share/nginx/html/
