--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,5 @@ services:
       - 11443:443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/https:/ssl/:rw
+      - /home/gjw/myDockerFiles/nginx/conf/https:/ssl/:rw
       - ./static:/usr/share/nginx/html/
