--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
   server_tokens off;
   server {
     listen       80;
-    server_name  www.warmplace.cn;
+    server_name  api.warmplace.cn;
     location / {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
