--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,20 +26,16 @@ http {
     }
   }
   server {
-    listen 80;
-    listen 443 ssl http2;
+    listen      443 ssl;
     server_name safe.warmplace.cn;
     ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
     ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
     ssl_session_timeout 5m;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
+    ssl_verify_client  off;
     # set max upload size
     client_max_body_size 4096M;
     fastcgi_buffers 64 4K;    
     charset utf-8;
-    error_page 497  https://$host$uri?$args;
     location = /robots.txt {
         allow all;
         log_not_found off;
