--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,15 @@ http {
     ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
     ssl_session_timeout 5m;
     ssl_verify_client  off;
+    location /favicon.ico {
+      log_not_found off;
+      access_log off;
+    }
+    location ~ /\. {
+      deny all;
+      access_log off;
+      log_not_found off;
+    }
     location = /robots.txt {
         allow all;
         log_not_found off;
