--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,6 @@ http {
     server_name safe.warmplace.cn;
     ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
     ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
-    ssl_session_timeout 5m;
     ssl_verify_client  off;
     location /favicon.ico {
       log_not_found off;
@@ -48,9 +47,15 @@ http {
     }
     location ^~ / {
       proxy_pass            http://127.0.0.1:7000;
-      proxy_redirect off;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host  $host;
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_connect_timeout 60; 
+      proxy_send_timeout 60; 
+      proxy_read_timeout 60; 
+      proxy_buffer_size 4k; 
+      proxy_buffers 4 32k;
+      proxy_busy_buffers_size 64k; 
+      proxy_temp_file_write_size 64k;
     }
     location = /.htaccess {
         return 404;
