--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,7 +47,7 @@ http {
     }
     location ^~ / {
       proxy_pass  http://192.168.0.171:7000;
-      proxy_set_header Host $host;
+      proxy_set_header Host $host:$proxy_port;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
       proxy_send_timeout  60;
