--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,8 +46,8 @@ http {
         access_log off;
     }
     location ^~ / {
-      proxy_pass  http://192.168.0.171:11443;
-      proxy_set_header Host $host:$server_port;
+      proxy_pass  http://192.168.0.171:7000;
+      proxy_set_header Host $host:11443;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
       proxy_send_timeout  60;
