--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg": "^2.15.1",
     "egg-mongoose": "^3.3.1",
     "egg-scripts": "^2.11.0",
+    "egg-view-pug": "^1.0.0",
     "murmurhash": "^2.0.0"
   },
   "devDependencies": {
@@ -26,8 +27,8 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --title=egg-server-eat-node --port=3000",
-    "start:daemon": "egg-scripts start --daemon --title=egg-server-eat-node",
+    "start": "EGG_SERVER_ENV=prod egg-scripts start --title=egg-server-eat-node --port=3000",
+    "start:daemon": "EGG_SERVER_ENV=prod egg-scripts start --daemon --title=egg-server-eat-node",
     "stop": "egg-scripts stop --title=egg-server-eat-node",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
