--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg": "^2.15.1",
     "egg-mongoose": "^3.3.1",
     "egg-scripts": "^2.11.0",
+    "egg-view": "^2.1.3",
     "egg-view-pug": "^1.0.0",
     "murmurhash": "^2.0.0"
   },
