--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
     image: nginx:latest
     container_name: nginx-short-url
     ports:
-      - 1180:80
-      - 11443:443
+      - 80:80
+      - 443:443
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /home/gjw/myDockerFiles/nginx/conf/https:/ssl/:rw
+      - ./nginx/https:/ssl/:rw
       - ./static:/usr/share/nginx/html
