--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,18 +19,20 @@ http {
   server_tokens off;
   server {
     listen  80;
-    server_name  api.warmplace.cn;
+    server_name  api.o2u.club;
     location / {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
     }
   }
   server {
-    listen  443 ssl;
-    server_name safe.warmplace.cn;
-    ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
-    ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
-    ssl_verify_client  off;
+    listen  80;
+    server_name api.21u.club;
+    # listen  443 ssl;
+    # server_name safe.warmplace.cn;
+    # ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
+    # ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
+    # ssl_verify_client  off;
     location /favicon.ico {
       log_not_found off;
       access_log off;
@@ -46,8 +48,8 @@ http {
         access_log off;
     }
     location ^~ / {
-      proxy_pass  http://192.168.0.171:7000;
-      proxy_set_header Host $host:11443;
+      proxy_pass  http://172.16.0.10:7000;
+      proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
       proxy_send_timeout  60;
