--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,13 +26,11 @@ http {
     }
   }
   server {
-    listen  80;
+    listen  443 ssl;
     server_name api.21u.club;
-    # listen  443 ssl;
-    # server_name safe.warmplace.cn;
-    # ssl_certificate   /ssl/4695048_safe.warmplace.cn.pem;
-    # ssl_certificate_key  /ssl/4695048_safe.warmplace.cn.key;
-    # ssl_verify_client  off;
+    ssl_certificate   /ssl/1_api.21u.club_bundle.crt;
+    ssl_certificate_key  /ssl/2_api.21u.club.key;
+    ssl_verify_client  off;
     location /favicon.ico {
       log_not_found off;
       access_log off;
