fix: change nginx

--- a/JSON/eatConfig.json
+++ b/JSON/eatConfig.json
@@ -1,7 +1,7 @@
 {
   "restaurants": ["天之骄子-依鲜", "天之骄子-稻香情", "天之骄子-港式餐厅", "天之骄子-面馆", "美食广场-锅贴", "美食广场-鱼你说", "美食广场-陕西面馆", "美食广场-黄焖鸡", "美食广场-胥先生", "美食广场-吉祥馄炖", "千里香混沌/旁边的小笼包", "香锅"],
   "message": "\n粮食就是生命，知识拯救灵魂。",
-  "body": "\n> [红烧带鱼](https://safe.warmplace.cn:11443/short/4f0h7S) \n> 记得按时吃饭！",
+  "body": "\n> 记得按时吃饭！",
   "extends": {
     "mentioned_list": ["@all"]
   }
