--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,19 +17,117 @@ http {
   keepalive_timeout  65;
   gzip  on;
   server_tokens off;
+  server{
+    listen 80;
+    server_name api.o2u.club;
+    rewrite ^(.*) https://$server_name$1 permanent;
+  }
   server {
-    listen  80;
-    server_name  api.o2u.club;
+    listen  443 ssl;
+    server_name api.o2u.club;
+    ssl_certificate   /ssl/1_api.o2u.club_bundle.crt;
+    ssl_certificate_key  /ssl/2_api.o2u.club.key;
+    ssl_verify_client  off;
     location / {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
     }
+  }
+
+  server{
+    listen 80;
+    server_name api.21u.club;
+    rewrite ^(.*) https://$server_name$1 permanent;
   }
   server {
     listen  443 ssl;
     server_name api.21u.club;
     ssl_certificate   /ssl/1_api.21u.club_bundle.crt;
     ssl_certificate_key  /ssl/2_api.21u.club.key;
+    ssl_verify_client  off;
+    location /favicon.ico {
+      log_not_found off;
+      access_log off;
+    }
+    location ~ /\. {
+      deny all;
+      access_log off;
+      log_not_found off;
+    }
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+    location ^~ / {
+      proxy_pass  http://127.0.0.1:7000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For  $remote_addr;
+      proxy_connect_timeout 60;
+      proxy_send_timeout  60;
+      proxy_read_timeout  60;
+      proxy_buffer_size 4k;
+      proxy_buffers 4 32k;
+      proxy_busy_buffers_size 64k;
+      proxy_temp_file_write_size 64k;
+    }
+    location = /.htaccess {
+        return 404;
+    }
+  }
+
+  server{
+    listen 80;
+    server_name short.21u.club;
+    rewrite ^(.*) https://$server_name$1 permanent;
+  }
+  server {
+    listen  443 ssl;
+    server_name short.21u.club;
+    ssl_certificate   /ssl/1_short.21u.club_bundle.crt;
+    ssl_certificate_key  /ssl/2_short.21u.club.key;
+    ssl_verify_client  off;
+    location /favicon.ico {
+      log_not_found off;
+      access_log off;
+    }
+    location ~ /\. {
+      deny all;
+      access_log off;
+      log_not_found off;
+    }
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+    location ^~ / {
+      proxy_pass  http://127.0.0.1:7000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For  $remote_addr;
+      proxy_connect_timeout 60;
+      proxy_send_timeout  60;
+      proxy_read_timeout  60;
+      proxy_buffer_size 4k;
+      proxy_buffers 4 32k;
+      proxy_busy_buffers_size 64k;
+      proxy_temp_file_write_size 64k;
+    }
+    location = /.htaccess {
+        return 404;
+    }
+  }
+
+  server{
+    listen 80;
+    server_name roland.o2u.club;
+    rewrite ^(.*) https://$server_name$1 permanent;
+  }
+  server {
+    listen  443 ssl;
+    server_name roland.o2u.club;
+    ssl_certificate   /ssl/1_roland.o2u.club_bundle.crt;
+    ssl_certificate_key  /ssl/2_roland.o2u.club.key;
     ssl_verify_client  off;
     location /favicon.ico {
       log_not_found off;
