--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
         access_log off;
     }
     location ^~ / {
-      proxy_pass  http://127.0.0.1:7000;
+      proxy_pass  http://localhost:7000;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
@@ -87,7 +87,7 @@ http {
         access_log off;
     }
     location ^~ / {
-      proxy_pass  http://127.0.0.1:7000;
+      proxy_pass  http://localhost:7000;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
@@ -124,7 +124,7 @@ http {
         access_log off;
     }
     location ^~ / {
-      proxy_pass  http://127.0.0.1:7000;
+      proxy_pass  http://localhost:7000;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For  $remote_addr;
       proxy_connect_timeout 60;
