--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -139,5 +139,39 @@ http {
         return 404;
     }
   }
+
+   server {
+    listen  80;
+    server_name *;
+    location /favicon.ico {
+      log_not_found off;
+      access_log off;
+    }
+    location ~ /\. {
+      deny all;
+      access_log off;
+      log_not_found off;
+    }
+    location = /robots.txt {
+        allow all;
+        log_not_found off;
+        access_log off;
+    }
+    location ^~ / {
+      proxy_pass  http://localhost:7000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For  $remote_addr;
+      proxy_connect_timeout 60;
+      proxy_send_timeout  60;
+      proxy_read_timeout  60;
+      proxy_buffer_size 4k;
+      proxy_buffers 4 32k;
+      proxy_busy_buffers_size 64k;
+      proxy_temp_file_write_size 64k;
+    }
+    location = /.htaccess {
+        return 404;
+    }
+  }
   include /etc/nginx/conf.d/*.conf;
 }
